@@ -1,3 +1,4 @@
+* Add support of domain for non-relation field
 * Allow drag & drop on the attachment button
 * Replace sha widget by password
 * Add Len to PYSON
